# rocos-remote

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  qml.qrc  qtquickcontrols2.conf
Client/plugins/sim/: CMakeLists.txt  configwidget.cpp  sslworld.cpp  sslworld.h
Client/src/: field.cpp  field.h  fieldconfig.cpp  fieldconfig.h  fieldlayers.cpp  fieldlayers.h  globalsettings.cpp  globalsettings.h  interaction.cpp  interaction.h  layer.cpp  layer.h  main.cpp  networkinterfacemanager.cpp  networkinterfacemanager.h  paraminterface.cpp  refereebox.cpp  refereebox.h  simulator.cpp  simulator.h  themecolor.cpp  themecolor.h
Client/src/qml/: ControlBoard.qml  CrazyBoard.qml  RefereeBox.qml  Settings.qml  main.qml
Client/src/qml/Components/: CButton.qml  CColumn.qml  CComboBox.qml  CGridScroll.qml  CGroupBox.qml  CLight.qml  CSpinBox.qml  CSwitch.qml  CText.qml  LayoutItem.qml  qmldir
Client/src/qml/CustomDW/: DockWidget.qml  FloatingWindow.qml  Frame.qml  TitleBar.qml
Client/src/qml/Theme/: Theme.qml  qmldir
Client/src/utils/: qsingleton.h
Client/src/vision/: dealball.cpp  dealball.h  dealrobot.cpp  dealrobot.h  kalmanfilter.cpp  kalmanfilter.h  messageformat.h  visionmodule.cpp  visionmodule.h
cmake/modules/: FindODE.cmake  Findtoluapp.cmake
share/: geometry.h  parammanager.cpp  parammanager.h  staticparams.h  yamlparams.cpp  yamlparams.h  yamlparamsconvert.h
share/proto/: zss_cmd.proto  zss_debug.proto
